fixed footer on mobile and spacing between slider and sliderbuttons

--- a/src/components/background/background.scss
+++ b/src/components/background/background.scss
@@ -37,15 +37,15 @@
 	}
 
 	.backWave {
-		top: 36px;
-	}
-
-	.middleWave {
 		top: 76px;
 	}
 
+	.middleWave {
+		top: 140px;
+	}
+
 	.frontWave {
-		top: 50px;
+		top: 86px;
 	}
 
 	&Overlap {
