--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -46,7 +46,7 @@
 		top: 50%;
 		left: 50%;
 		text-align: center;
-		width: 50%;
+		width: 75%;
 
 		@include for-desktop {
 			font-size: 50px;
