--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -27,7 +27,7 @@
 	}
 
 	&Nav {
-		position: absolute;
+		position: fixed;
 		bottom: 0;
 		z-index: 100;
 		background-color: $white;
