--- a/src/components/slidernavigation/slidernavigation.scss
+++ b/src/components/slidernavigation/slidernavigation.scss
@@ -3,7 +3,7 @@
 
 .slider {
 	&Container {
-		margin-top: calc(-230px + 100vw + 5vh);
+		margin-top: calc(-75px + 100vw + 5vh);
 
 		@include for-desktop {
 			box-sizing: border-box;
@@ -26,8 +26,8 @@
 		margin: 60px auto;
 		width: fit-content;
 		flex-wrap: wrap;    
-		margin: auto;
 		padding-bottom: 40px;
+		margin: 30px auto auto;
 
 		@include for-desktop {
 			margin: 10px auto;
@@ -45,10 +45,14 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			margin: 0 20px;  
 			text-align: center;
+			margin: 0 20px 10px;
+
+			@include for-desktop {
+				margin: 0 20px;  
+			}
 		}
-		
+
 		&Button {
 			box-sizing: border-box;
 			margin: 0;
